7. Fix "companies-grid" component styling 7.1 reduce image size 7.2 adjust spacing between images

--- a/styles/style.css
+++ b/styles/style.css
@@ -374,6 +374,11 @@ img {
   /* component 5 */
   .companies-grid {
     flex-direction: row;
+    justify-content: space-between;
+  }
+
+  .companies-grid > img {
+    width: 15%;
   }
 
   /* component 6 */
